--- a/css_bootstrap/main.css
+++ b/css_bootstrap/main.css
@@ -16,3 +16,29 @@ header{
 	text-decoration: underline;
 	background-color: yellow;
 }
+body{
+	padding-bottom: 244px;
+}
+.wrapper{
+	position: relative;
+	background-color: #fff;
+	z-index: 999;
+	box-shadow: 0px 2px 20px #000;
+}
+footer{
+	position: fixed;
+	width: 100%;
+	bottom:0;
+	left:0;
+	background: #ada996; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea); /* Chrome 10-25, Safari 5.1-6 */
+  	background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea); /* Chrome 10-25, Safari 5.1-6 */
+	border-top: 1px solid #ecc;
+}
+footer .col-sm-3{
+		height: 244px;
+}
+footer .logo{
+	margin-top: 50%;
+	transform: translateY(-50%);
+}
