--- a/css_bootstrap/main.css
+++ b/css_bootstrap/main.css
@@ -2,8 +2,30 @@ header{
 	background-color: grey;
 }
 .header__info{
-	font-size: 28px;
+	font: 12px 400 HarmoniaSansProCyr;
 }
+.header__info > email,
+.header__info > tel
+{
+	display: inline-block;
+	margin: 5px 10px;
+}
+
+.logo{
+	display: inline-block;
+	margin: 8px;
+}
+.logo > img{
+	width: 118px;
+}
+.logo > span{
+	display: block;
+	text-align: center;
+	color: rgba(70, 80, 90, 0.8);
+	font-size: 12px;
+	letter-spacing: .15em;
+}
+
 .socials > i{
 
 }
